{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 109,
  "lineage": "682047eb-7b56-80f3-93bf-1dfe4751241a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-443-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-04T11:41:35.043-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "172.19.0.32/28"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/probable-drive-327613/global/firewalls/allow-443-egress",
            "log_config": [],
            "name": "allow-443-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/jonathan-gen-vpc",
            "priority": 1000,
            "project": "probable-drive-327613",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/firewalls/allow-443-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "test-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.jonathan-gen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tunnel-iap-all-firewal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-11-04T02:28:33.864-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/probable-drive-327613/global/firewalls/tunnel-iap-all-firewall",
            "log_config": [],
            "name": "tunnel-iap-all-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/jonathan-gen-vpc",
            "priority": 1000,
            "project": "probable-drive-327613",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/firewalls/tunnel-iap-all-firewall",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-cluster",
              "test-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.jonathan-gen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tunnel-iap-firewal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-04T02:28:33.955-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/probable-drive-327613/global/firewalls/tunnel-iap-firewall",
            "log_config": [],
            "name": "tunnel-iap-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/jonathan-gen-vpc",
            "priority": 1000,
            "project": "probable-drive-327613",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/firewalls/tunnel-iap-firewall",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-cluster",
              "test-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.jonathan-gen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jonathan-gen-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20211104",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/zones/us-west1-b/disks/jonathan-gen-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/probable-drive-327613/zones/us-west1-b/instances/jonathan-gen-instance",
            "instance_id": "4584959127346321295",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "ZJA2d-6HLnM=",
            "name": "jonathan-gen-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/default",
                "network_ip": "10.138.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/regions/us-west1/subnetworks/default",
                "subnetwork_project": "probable-drive-327613"
              }
            ],
            "project": "probable-drive-327613",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/zones/us-west1-b/instances/jonathan-gen-instance",
            "tags": [
              "test-server"
            ],
            "tags_fingerprint": "hcq1iIHRHKw=",
            "zone": "us-west1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jonathan-gen-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20211104",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/zones/us-west1-a/disks/jonathan-gen-instance-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/probable-drive-327613/zones/us-west1-a/instances/jonathan-gen-instance-2",
            "instance_id": "8555454146783327565",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "ZJA2d-6HLnM=",
            "name": "jonathan-gen-instance-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/jonathan-gen-vpc",
                "network_ip": "172.16.0.20",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/regions/us-west1/subnetworks/my-subnet-0",
                "subnetwork_project": "probable-drive-327613"
              }
            ],
            "project": "probable-drive-327613",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/zones/us-west1-a/instances/jonathan-gen-instance-2",
            "tags": [
              "test-server"
            ],
            "tags_fingerprint": "hcq1iIHRHKw=",
            "zone": "us-west1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jonathan-gen-instance-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20211105",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/zones/us-west1-b/disks/jonathan-gen-instance-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/probable-drive-327613/zones/us-west1-b/instances/jonathan-gen-instance-3",
            "instance_id": "6508637462685350463",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "Jm2cz17jBQ0=",
            "metadata_startup_script": "    sudo apt install ufw\r\n    sudo ufw enable\r\n    sudo ufw allow 22\r\n    sudo iptables-save\r\n",
            "name": "jonathan-gen-instance-3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/jonathan-gen-vpc",
                "network_ip": "172.16.0.25",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/regions/us-west1/subnetworks/my-subnet-0",
                "subnetwork_project": "probable-drive-327613"
              }
            ],
            "project": "probable-drive-327613",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/zones/us-west1-b/instances/jonathan-gen-instance-3",
            "tags": [
              "test-server"
            ],
            "tags_fingerprint": "hcq1iIHRHKw=",
            "zone": "us-west1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "jonathan-gen-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/probable-drive-327613/global/networks/jonathan-gen-vpc",
            "mtu": 1460,
            "name": "jonathan-gen-vpc",
            "project": "probable-drive-327613",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/jonathan-gen-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router-default-uswe1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-04T06:29:56.426-07:00",
            "id": "projects/probable-drive-327613/regions/us-west1/routers/nat-router-default-uswe1",
            "name": "nat-router-default-uswe1",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/default",
            "project": "probable-drive-327613",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/regions/us-west1/routers/nat-router-default-uswe1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router-usce1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-04T02:28:21.909-07:00",
            "id": "projects/probable-drive-327613/regions/us-central1/routers/nat-router-usce1",
            "name": "nat-router-usce1",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/default",
            "project": "probable-drive-327613",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/regions/us-central1/routers/nat-router-usce1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router-uswe1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-04T02:28:34.018-07:00",
            "id": "projects/probable-drive-327613/regions/us-west1/routers/nat-router-uswe1",
            "name": "nat-router-uswe1",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/jonathan-gen-vpc",
            "project": "probable-drive-327613",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/regions/us-west1/routers/nat-router-uswe1"
          },
          "dependencies": [
            "google_compute_network.jonathan-gen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-config-default-uswe1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "probable-drive-327613/us-west1/nat-router-default-uswe1/nat-config-uswe1",
            "min_ports_per_vm": 0,
            "name": "nat-config-uswe1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "probable-drive-327613",
            "region": "us-west1",
            "router": "nat-router-default-uswe1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.nat-router-default-uswe1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-config-usce1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "probable-drive-327613/us-central1/nat-router-usce1/nat-config-usce1",
            "min_ports_per_vm": 0,
            "name": "nat-config-usce1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "probable-drive-327613",
            "region": "us-central1",
            "router": "nat-router-usce1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.nat-router-usce1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-config-uswe1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "probable-drive-327613/us-west1/nat-router-uswe1/nat-config-uswe1",
            "min_ports_per_vm": 0,
            "name": "nat-config-uswe1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "probable-drive-327613",
            "region": "us-west1",
            "router": "nat-router-uswe1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.jonathan-gen-vpc",
            "google_compute_router.nat-router-uswe1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "jonathan-gen-usce1-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-04T02:28:34.201-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/probable-drive-327613/regions/us-central1/subnetworks/jonathan-gen-usce1-sn",
            "ip_cidr_range": "172.16.0.0/28",
            "name": "jonathan-gen-usce1-sn",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/jonathan-gen-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "probable-drive-327613",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/regions/us-central1/subnetworks/jonathan-gen-usce1-sn"
          },
          "dependencies": [
            "google_compute_network.jonathan-gen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my-subnet-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-04T02:28:34.330-07:00",
            "gateway_address": "172.16.0.17",
            "id": "projects/probable-drive-327613/regions/us-west1/subnetworks/my-subnet-0",
            "ip_cidr_range": "172.16.0.16/28",
            "name": "my-subnet-0",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/global/networks/jonathan-gen-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "probable-drive-327613",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "172.20.0.0/20",
                "range_name": "pod-range"
              },
              {
                "ip_cidr_range": "172.21.0.0/20",
                "range_name": "service-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-drive-327613/regions/us-west1/subnetworks/my-subnet-0"
          },
          "dependencies": [
            "google_compute_network.jonathan-gen-vpc"
          ]
        }
      ]
    }
  ]
}